--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": ">=7.4",
+        "symfony/process": "^5.0"
     },
     "extra": {
         "laravel": {
